<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="0"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:orderInCategory="1"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@mipmap/ic_launcher"
        android:orderInCategory="2"
        android:title="@string/title_notifications" />
    <item
        android:id="@+id/navigation_stars"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="3"
        android:title="@string/title_stars" />
    <item
        android:id="@+id/navigation_follow"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:orderInCategory="4"
        android:title="@string/title_follows" />
</menu>
